@@ -1,0 +1,30 @@
+# This is the project specific Settings.yml file.
+# Place Sphinx specific build information here.
+# Settings given here will replace the settings of 'conf.py'.
+
+---
+conf.py:
+  copyright: 2016
+  project: Seminar Manager
+  version: 0.10
+  release: 0.10.1
+  latex_documents:
+  - - Index
+    - seminars.tex
+    - Seminar Manager
+    - Oliver Klee
+    - manual
+  latex_elements:
+    papersize: a4paper
+    pointsize: 10pt
+    preamble: \usepackage{typo3}
+  latex_use_parts: True
+  latex_show_pagerefs: True
+  intersphinx_mapping:
+    restdoc:
+    - https://docs.typo3.org/typo3cms/extensions/restdoc/
+    - null
+    t3tsref:
+    - https://docs.typo3.org/typo3cms/TyposcriptReference/
+    - null
+...
